# eidon

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml
docs/: best-practices.md  contact.md  core-concepts.md  generate.py  getting-started.md  index.md  projects.md
docs/_layouts/: default.html
docs/cli/: build.md  convert.md  index.md  run.md  setup.md
docs/experiment-stages/: AudioCheck.md  Blank.md  CursorMultipleChoiceQuestion.md  DriftCorrect.md  EyeLinkDriftCorrect.md  EyeLinkSetup.md  FixationCross.md  FreeTextQuestion.md  HostControlled.md  LabelAnnotation.md  MouseTrackerDriftCorrect.md  MouseTrackerSetup.md  MultipleChoiceQuestion.md  QuestionTree.md  Setup.md  StimulusMultiPage.md  StimulusPage.md  custom.md  index.md
docs/experiment-types/: LatinSquareReading.md  MultiPageReading.md  SinglePageReading.md  custom.md  designs.md  index.md
examples/LatinSquareReading/: config.yaml
examples/LatinSquareReading/materials/items/: 2.txt  3.txt  4.txt  fillers.txt  practice.txt
examples/MultiPageReading/: config.yaml
examples/MultiPageReading/materials/: end.txt  instructions.txt
examples/MultiPageReading/materials/items/: 1.txt  2.txt  3.txt  4.txt
examples/SinglePageReading/: config.yaml
examples/SinglePageReading/materials/: instructions.txt  intro.txt
examples/SinglePageReading/materials/items/: 1.txt  2.txt  3.txt  4.txt  fillers.txt  practice.txt
src/eidon/: __main__.py  convert.py  setup.py  utils.py
src/eidon/fonts/: __init__.py
src/eidon/run/: __init__.py  events.py  runner.py  stages.py
src/eidon/setup/: setup.py
(+2 files in other folders)
