[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eidon"
version = "0.1.1"
dependencies = [
    "jsonschema>=4.25.1,<5.0.0",
    "numpy>=2.3.5,<3.0.0",
    "pillow>=11.1.0,<12.0.0",
    "pyaudio>=0.2.14,<0.3.0",
    "pyglet>=2.1.11,<3.0.0",
    "pyyaml>=6.0.1,<7.0.0",
]

[project.scripts]
eidon-compile-experiment = "eidon.compile_experiment:main"
eidon = "eidon.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"eidon.fonts" = ["*.ttf"]
